Added new Data Analysis projects

--- a/Flight_Price_EDA/Flight_Price_EDA.ipynb
+++ b/Flight_Price_EDA/Flight_Price_EDA.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 22,
    "id": "4a558ee2-cc5d-4ef3-82e3-e0236c596d2d",
    "metadata": {},
    "outputs": [],
@@ -45,17 +45,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
-   "id": "e0779ccb-f342-4daa-95f2-45cdeefb9f9d",
+   "execution_count": 23,
+   "id": "ca6e1eb0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: openpyxl in c:\\users\\aksha\\mlproject\\venv\\lib\\site-packages (3.1.5)\n",
+      "Requirement already satisfied: et-xmlfile in c:\\users\\aksha\\mlproject\\venv\\lib\\site-packages (from openpyxl) (2.0.0)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution -lotly (c:\\users\\aksha\\mlproject\\venv\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -lotly (c:\\users\\aksha\\mlproject\\venv\\lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution -lotly (c:\\users\\aksha\\mlproject\\venv\\lib\\site-packages)\n"
+     ]
+    }
+   ],
    "source": [
-    "df_flight = pd.read_excel('flight_price.xlsx')"
+    "!pip install openpyxl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 24,
+   "id": "e0779ccb-f342-4daa-95f2-45cdeefb9f9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Airline Date_of_Journey    Source Destination                  Route  \\\n",
+      "0       IndiGo      24/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+      "1    Air India       1/05/2019   Kolkata    Banglore  CCU → IXR → BBI → BLR   \n",
+      "2  Jet Airways       9/06/2019     Delhi      Cochin  DEL → LKO → BOM → COK   \n",
+      "3       IndiGo      12/05/2019   Kolkata    Banglore        CCU → NAG → BLR   \n",
+      "4       IndiGo      01/03/2019  Banglore   New Delhi        BLR → NAG → DEL   \n",
+      "\n",
+      "  Dep_Time  Arrival_Time Duration Total_Stops Additional_Info  Price  \n",
+      "0    22:20  01:10 22 Mar   2h 50m    non-stop         No info   3897  \n",
+      "1    05:50         13:15   7h 25m     2 stops         No info   7662  \n",
+      "2    09:25  04:25 10 Jun      19h     2 stops         No info  13882  \n",
+      "3    18:05         23:30   5h 25m      1 stop         No info   6218  \n",
+      "4    16:50         21:35   4h 45m      1 stop         No info  13302  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load Excel file\n",
+    "df_flight = pd.read_excel(r'C:\\Users\\aksha\\Data-Analysis-Projects\\Flight_Price_EDA\\flight_price.xlsx')\n",
+    "\n",
+    "# Show first 5 rows\n",
+    "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "a1c2a863-ee71-45bf-af52-d97edfa2c6d5",
    "metadata": {},
    "outputs": [
@@ -184,7 +238,7 @@
        "4    16:50         21:35   4h 45m      1 stop         No info  13302  "
       ]
      },
-     "execution_count": 362,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 26,
    "id": "89c0f6ff-ec79-4633-8d6d-602919c1ac5e",
    "metadata": {},
    "outputs": [
@@ -205,7 +259,7 @@
        "(10683, 11)"
       ]
      },
-     "execution_count": 363,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 27,
    "id": "94a638be-dc7a-488b-8447-aa246d8d21d4",
    "metadata": {},
    "outputs": [
@@ -251,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 28,
    "id": "7cea287c-345f-4464-a2f5-d6bb86c38683",
    "metadata": {},
    "outputs": [
@@ -272,7 +326,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 365,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 29,
    "id": "a3cabd63-b635-4a25-80a6-3ccda6d775a4",
    "metadata": {},
    "outputs": [],
@@ -295,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 30,
    "id": "b10d3c4c-89cc-492b-b87e-a08ad3a2180f",
    "metadata": {},
    "outputs": [
@@ -333,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 31,
    "id": "fd0f401a-f3bc-43e0-a605-fb5b99f9e7c6",
    "metadata": {},
    "outputs": [],
@@ -343,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 32,
    "id": "42e15eb6-d414-4279-a0ae-34260d00cdc0",
    "metadata": {},
    "outputs": [
@@ -484,7 +538,7 @@
        "4         21:35   4h 45m      1 stop         No info  13302     1      3  2019  "
       ]
      },
-     "execution_count": 369,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 33,
    "id": "02aabfd8-0aae-4b8c-b162-8f5d1967a513",
    "metadata": {},
    "outputs": [],
@@ -505,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 34,
    "id": "1c249489-7c07-4f6f-b1fb-8eb30ecbc637",
    "metadata": {},
    "outputs": [],
@@ -516,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 35,
    "id": "72f0b5f8-bc9c-46e6-ad23-5c2203868329",
    "metadata": {},
    "outputs": [
@@ -676,7 +730,7 @@
        "4            21           35  "
       ]
      },
-     "execution_count": 372,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 36,
    "id": "0cfc0810-c158-477d-88ca-3326fef52f5c",
    "metadata": {},
    "outputs": [],
@@ -697,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 37,
    "id": "c923cfc5-e80b-4fbb-b323-8c0b3e1b5a79",
    "metadata": {},
    "outputs": [
@@ -851,7 +905,7 @@
        "4           35  "
       ]
      },
-     "execution_count": 374,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 38,
    "id": "10e785aa-843b-4503-bdde-72cccf373f5a",
    "metadata": {},
    "outputs": [],
@@ -876,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 39,
    "id": "13a66bac-d0ad-4e1b-9fa3-88bc77dc3ca0",
    "metadata": {},
    "outputs": [
@@ -897,7 +951,7 @@
        "Name: Duration, Length: 10683, dtype: object"
       ]
      },
-     "execution_count": 376,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 40,
    "id": "4385ab04-56c2-43a9-996c-4f07690fc72e",
    "metadata": {},
    "outputs": [],
@@ -918,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 41,
    "id": "e488711e-58a8-4780-8bc2-f053b261baf6",
    "metadata": {},
    "outputs": [],
@@ -928,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 42,
    "id": "57df4332-86dd-4af4-9cbb-8ed7e3615080",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1148,7 @@
        "4        16       50             4           45  "
       ]
      },
-     "execution_count": 379,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1105,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 43,
    "id": "a38cef7e-f5d1-4132-899c-2d5ea5a389ec",
    "metadata": {},
    "outputs": [
@@ -1115,7 +1169,7 @@
        "'1 stop'"
       ]
      },
-     "execution_count": 380,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 44,
    "id": "78988973-a611-4675-ab64-111fdd5be50d",
    "metadata": {},
    "outputs": [],
@@ -1141,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 45,
    "id": "be316927-2915-4308-9e50-ef5665e33a29",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1205,7 @@
        "array([0, 2, 1, 3, 4], dtype=int64)"
       ]
      },
-     "execution_count": 382,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 46,
    "id": "4b37d96e-aa6e-44ae-9b3c-c4334b549590",
    "metadata": {},
    "outputs": [],
@@ -1172,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": 47,
    "id": "93e29d67-d640-4588-862f-269dfc062d67",
    "metadata": {},
    "outputs": [],
@@ -1182,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": 48,
    "id": "4395b05d-aebe-42d1-95fe-be71e7d8b8f2",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1252,7 @@
        "       [0., 1., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 385,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1210,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 49,
    "id": "6a2b96c8-a693-46f1-8a63-5d3d6bab2fb1",
    "metadata": {},
    "outputs": [
@@ -1623,7 +1677,7 @@
        "[10683 rows x 23 columns]"
       ]
      },
-     "execution_count": 386,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1697,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1657,7 +1711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
